# Gym-Management-System

./: README.md  pyproject.toml
Final Project/: GymMS.html  GymMS.qmd  gymDatabase-ddl.sql  main.py  queries.txt
Final Project/instance/: gymDatabase-ddl.sql
Final Project/templates/: index.html
reports/: README.md  report.html  report.qmd
