[tool.poetry]
name = "cmsc508-fa2023-prj-gymmanagementsystem"
version = "0.1.0"
description = ""
authors = ["Harita Agarwal <agarwalhp@vcu.edu>", "Emil Baez Salazar <baezsalazaee@vcu.edu>", "Anisha VijayKumar <vijaykumaa@vcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.4.0"
plotly = "^5.0.0"
flask = "^2.0.0"
flask-sqlalchemy = "^3.0.0"
jupyter = "^1.0.0"
requests = "^2.31.0"
markdown2 = "^2.4.11"
pandas = "^2.1.3"
tabulate = "^0.9.0"
pymysql = "^1.1.0"
mysql-connector-python = "^8.2.0"
python-dotenv = "^1.0.0"
flask-markdown2 = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
